Wrongly copypasted variable corrected

--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,4 +1,4 @@
 <div class="container">
   <h1>Insert new article</h1>
-  <%= render 'form', task: @task %>
+  <%= render 'form', article: @article %>
 </div>
